[tool.poetry]
name = "board-service"
version = "0.1.0"
description = ""
authors = ["raphael bouchard"]
readme = "README.md"
packages = [
         { include = "src" }
         ]

[tool.poetry.dependencies]
python = "^3.11"
rpi-gpio = "^0.7.1"
pydantic = "^2.4.2"
httpx = "^0.25.2"
schedule = "^1.2.1"
pydantic-settings = "^2.1.0"
smbus2 = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
